--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.13.0",
     "howler": "^2.2.4",
     "lenis": "^1.3.11",
+    "lil-gui": "^0.21.0",
     "next": "15.5.5",
     "next-seo": "^6.8.0",
     "plausible-tracker": "^0.3.9",
