--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "three": "^0.180.0",
     "three-stdlib": "^2.36.0"
   },
