--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "@studio-freight/lenis": "^1.0.42",
     "axios": "^1.12.2",
+    "classnames": "^2.5.1",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "howler": "^2.2.4",
