--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
     "howler": "^2.2.4",
     "lenis": "^1.3.11",
     "lil-gui": "^0.21.0",
-    "next": "15.5.5",
+    "next": "^16.0.7",
     "next-seo": "^6.8.0",
     "plausible-tracker": "^0.3.9",
     "postprocessing": "^6.37.8",
