--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
+    "split-type": "^0.3.4",
     "three": "^0.180.0",
     "three-stdlib": "^2.36.0"
   },
