--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@pixi/react": "^8.0.5",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "@react-three/postprocessing": "^3.0.4",
@@ -25,6 +26,7 @@
     "lil-gui": "^0.21.0",
     "next": "^16.0.7",
     "next-seo": "^6.8.0",
+    "pixi.js": "^8.14.3",
     "plausible-tracker": "^0.3.9",
     "postprocessing": "^6.37.8",
     "qs": "^6.14.0",
